--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Minimal3x5';
+  src: url('/fonts/minimal3x5.ttf') format('truetype');
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,6 +22,7 @@
 }
 
 body {
+  font-family: 'Minimal3x5', sans-serif;
   color: rgb(var(--foreground-rgb));
   background: #FF5400;
 }
